fixing links and dates

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: "Visualization in Data Science (VDS at IEEE VIS 2024)"
 baseurl: "/2024"
 url: "http://www.visualdatascience.org/"
 conferenceshort: "VDS 2024"
-conferencedate: "October 23, 2023" 
+conferencedate: "TBD" 
 
 deadline_submission_vis:  "TBD"
 deadline_notification_vis: "TBD"
