--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@ url: "http://www.visualdatascience.org/"
 conferenceshort: "VDS 2024"
 conferencedate: "TBD" 
 
-deadline_submission_vis:  "TBD"
-deadline_notification_vis: "TBD"
+deadline_submission_vis:  "Thur, Jul. 6th, 2024 11:59 pm AOE"
+deadline_notification_vis: "Thur, Aug. 9th, 2024 11:59 pm AOE"
 event2_date: "TBD"
 
 # Build settings
