--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ conferencedate: "TBD"
 
 deadline_submission_vis:  "Fri, Jul. 12th, 2024 11:59 pm AOE"
 deadline_notification_vis: "Fri, Aug. 9th, 2024 11:59 pm AOE"
-event2_date: "TBD"
+event2_date: "Sun, Oct. 13th, 2024 1:30 pm EDT (UTC-4)"
 
 # Build settings
 markdown: kramdown
